--- a/style.css
+++ b/style.css
@@ -3,3 +3,25 @@ html {
   width: 100%;
   scroll-behavior: smooth;
 }
+header {
+  position: fixed;
+  margin-top: -100px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+h1 {
+  margin-top: 100px;
+  text-align: center;
+}
+h2 {
+  text-align: center;
+}
+p {
+  text-align: center;
+}
+}
+.topnav {
+  font-size: 20px;
+}
