--- a/style.css
+++ b/style.css
@@ -1,22 +1,36 @@
+* {
+  border: 1px solid red;
+}
+
+body {
+  margin: 0;
+}
+
 html {
+  box-sizing: border-box;
   height: 100%;
-  width: 100%;
+  width: 100vw;
   scroll-behavior: smooth;
 }
 header {
   position: fixed;
+  margin: 0;
   top: 0;
-  background-color: white;
-  display: flex;
-  justify-content: right;
-  width: 100%;
-}
-h1 {
-  padding-top: 50px;
+  left: 0;
+  background-color: grey;
+  width: 100vw;
   text-align: center;
 }
+#home {
+  text-align: center;
+}
+#greeting {
+  text-align: center;
+  font-size: 1em;
+  margin: 0;
+}
 h2 {
-  padding-top: 2rem;
+  padding-top: 2px;
   text-align: center;
 }
 p {
@@ -25,4 +39,23 @@ p {
 .topnav {
   font-size: 20px;
   padding: 0 17px;
+}
+a {
+  color: black;
+}
+a:hover {
+  color: darkgrey;
+}
+#intro, #building {
+  height: 100px;
+  max-height: 150px;
+  max-width: 100vw;
+  margin: 0px;
+  background-color: lightblue;
+}
+
+#intro {
+  font-size: 2rem;
+  padding: 90px 20vw 0 20vw;
+  overflow: scroll;
 }
