--- a/styles.css
+++ b/styles.css
@@ -55,4 +55,4 @@ main {
   100% {
     transform: rotate(60deg);
   }
-}/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=styles.css.map */
