--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ span.black {
 
 .bg {
   margin: 0;
-  background: #406fe6;
+  background: #5888ff;
   width: 100%;
   height: 100%;
 }
@@ -34,7 +34,7 @@ span.black {
 #sticky-header {
   display: flex;
   justify-content: space-between;
-  background: rgb(97, 130, 186);
+  background: #7fa5e8;
   position: fixed;
   width: 100%;
   height: 60px;
