--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ span.black {
 #sticky-header {
   display: flex;
   justify-content: space-between;
-  background: #7fa5e8;
+  background: #89CFF0;
   position: fixed;
   width: 100%;
   height: 60px;
