--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
   font-family: "Ubuntu Mono", monospace;
-  color: white;
+  color: rgb(54, 53, 53);
 }
 
 h1 {
@@ -8,15 +8,15 @@ h1 {
 }
 
 p {
-  color: rgb(227, 227, 226);
+  color: #e3e3e2;
 }
 
 span.red {
-  color: rgb(121, 0, 0);
+  color: #950e0e;
 }
 
 span.green {
-  color: rgb(0, 63, 0);
+  color: rgb(3, 97, 3);
 }
 
 span.black {
@@ -26,7 +26,7 @@ span.black {
 
 .bg {
   margin: 0;
-  background: #009CE1;
+  background: #0eb1f7;
   width: 100%;
   height: 100%;
 }
@@ -34,7 +34,7 @@ span.black {
 #sticky-header {
   display: flex;
   justify-content: space-between;
-  background: #89CFF0;
+  background: #6bcbf7ea;
   position: fixed;
   width: 100%;
   height: 60px;
