--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,6 @@
 * {
   font-family: "Ubuntu Mono", monospace;
-  color: white;
+  color: #2c2c2c;
 }
 
 h1 {
@@ -8,20 +8,24 @@ h1 {
 }
 
 p {
-  color: rgb(227, 227, 226);
+  color: #e3e3e2;
 }
 
 span.red {
-  color: rgb(121, 0, 0);
+  color: #d30202;
 }
 
 span.green {
-  color: rgb(0, 63, 0);
+  color: #005e00;
 }
 
 span.black {
   color: black;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+span.orange {
+  color: #a35d00;
 }
 
 .bg {
@@ -34,22 +38,27 @@ span.black {
 #sticky-header {
   display: flex;
   justify-content: space-between;
-  background: #89CFF0;
+  background: #89cff0f1;
   position: fixed;
   width: 100%;
   height: 60px;
   top: 0;
+  background-image: linear-gradient(to bottom, rgba(137, 207, 240, 0.95), transparent);
+  -webkit-mask-image: linear-gradient(to bottom, white, transparent);
+  mask-image: linear-gradient(to bottom, white, transparent);
 
-  #mobile-nav-menu, #home {
+  #mobile-nav-menu,
+  #home {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 60px;
     width: 60px;
   }
-  
+
   i {
     font-size: 35px;
+    opacity: .8;
   }
 }
 
@@ -66,8 +75,8 @@ span.black {
 }
 
 #empty-div {
-  width:100%;
-  height:400px;
+  width: 100%;
+  height: 400px;
 }
 
 #about-me {
