--- a/styles.scss
+++ b/styles.scss
@@ -79,7 +79,15 @@ span.orange {
   height: 400px;
 }
 
-#about-me {
+#empty-div2 {
+  width: 100%;
+  height: 200px;
+  border-top: 3px double white;
+}
+
+#about-me,
+#projects,
+#contact-me {
   margin: 0 30px;
   display: flex;
   flex-direction: column;
@@ -88,6 +96,30 @@ span.orange {
 
   p {
     text-align: start;
+  }
+}
+
+#contact-me p {
+  text-align: center;
+}
+
+#projects img {
+  margin: 0 0 20px;
+  max-height: 275px;
+  max-width: 350px;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  align-self: center;
+}
+
+#contact-links {
+  margin: 50px 0;
+  display: flex;
+  justify-content: space-between;
+
+  i {
+    font-size: 50px;
   }
 }
 
