--- a/styles.scss
+++ b/styles.scss
@@ -30,9 +30,31 @@ span.orange {
 
 .bg {
   margin: 0;
-  background: #009CE1;
+  background: transparent;
   width: 100%;
   height: 100%;
+}
+
+#background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("blueprint-texture-free-background-thumb33.png");
+  background-size: cover;
+  background-position: center;
+  z-index: -2;
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(82, 151, 204, 0.858);
+  z-index: -1;
 }
 
 #sticky-header {
@@ -43,9 +65,9 @@ span.orange {
   width: 100%;
   height: 60px;
   top: 0;
-  background-image: linear-gradient(to bottom, rgba(137, 207, 240, 0.95), transparent);
-  -webkit-mask-image: linear-gradient(to bottom, white, transparent);
-  mask-image: linear-gradient(to bottom, white, transparent);
+  background-image: linear-gradient(to bottom, rgba(137, 207, 240, 0.944), transparent);
+  -webkit-mask-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.682), transparent);
+  mask-image: linear-gradient(to bottom, rgb(255, 255, 255), transparent);
 
   #mobile-nav-menu,
   #home {
