--- a/styles.scss
+++ b/styles.scss
@@ -40,7 +40,7 @@ span.orange {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-image: url("blueprint-texture-free-background-thumb33.png");
   background-size: cover;
   background-position: center;
@@ -52,7 +52,7 @@ span.orange {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(82, 151, 204, 0.858);
   z-index: -1;
 }
