--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,12 @@
 
 h1 {
   font-size: 50px;
+  filter: drop-shadow(3px 2px 2px rgba(0, 0, 0, 0.2823529412));
 }
 
 p {
   color: #e3e3e2;
+  filter: drop-shadow(3px 2px 2px rgba(0, 0, 0, 0.2823529412));
 }
 
 span.red {
@@ -26,6 +28,10 @@ span.black {
 
 span.orange {
   color: #a35d00;
+}
+
+img {
+  filter: drop-shadow(5px 5px 2px #000000);
 }
 
 .bg {
@@ -136,6 +142,10 @@ span.orange {
   margin-top: 40px;
 }
 
+#stick-guy {
+  filter: drop-shadow(3px 2px 2px rgba(0, 0, 0, 0.2823529412));
+}
+
 #empty-div {
   width: 100%;
   height: 400px;
@@ -180,6 +190,7 @@ span.orange {
   margin: 50px 0;
   display: flex;
   justify-content: space-between;
+  filter: drop-shadow(3px 2px 2px rgba(0, 0, 0, 0.2823529412));
 }
 #contact-links i {
   font-size: 50px;
