--- a/styles.scss
+++ b/styles.scss
@@ -153,6 +153,7 @@ img {
 
 #stick-guy {
   filter: drop-shadow(3px 2px 2px #00000048);
+
 }
 
 #empty-div {
@@ -180,12 +181,6 @@ img {
   }
 }
 
-// .project {
-//   background-color: #e3e3e27c;
-//   border-radius: 2px;
-
-// }
-
 #contact-me p {
   text-align: center;
 }
@@ -201,7 +196,7 @@ img {
 }
 
 #contact-links {
-  margin: 50px 0;
+  margin: 50px 0 80px;
   display: flex;
   justify-content: space-between;
   filter: drop-shadow(3px 2px 2px #00000048);
@@ -234,5 +229,43 @@ main {
 
   100% {
     transform: rotate(60deg);
+  }
+}
+
+@media screen and (min-width: 650px) {
+  h1 {
+    font-size: 60px;
+  }
+
+  p {
+    font-size: 20px;
+  }
+
+  h4 {
+    font-size: 20px;
+  }
+
+  #stick-guy svg {
+    width: 300px;
+    height: 300px;
+  }
+
+  #about-me,
+  #projects,
+  #contact-me {
+    margin: 0 80px;
+  }
+
+  #contact-links {
+    margin: 50px 60px 100px;
+  }
+
+  #mobile-nav-background #nav-area {
+    margin: 0 60px;
+
+    .nav-button {
+      font-size: 50px;
+      margin: 30px 60px;
+    }
   }
 }
