--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ h1 {
 }
 
 p {
+  line-height: 1.3;
   color: #e3e3e2;
   filter: drop-shadow(3px 2px 2px rgba(0, 0, 0, 0.2823529412));
 }
@@ -194,7 +195,7 @@ img {
 #projects,
 #contact-me,
 #top h1 {
-  margin: 0 30px;
+  margin: 30px 30px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -211,6 +212,10 @@ img {
   text-align: center;
 }
 
+#contact-me {
+  align-items: center;
+}
+
 #projects img {
   margin: 0 0 20px;
   max-height: 275px;
@@ -222,7 +227,9 @@ img {
 }
 
 #contact-links {
-  margin: 50px 0 80px;
+  margin-top: 50px;
+  margin-bottom: 80px;
+  width: 325px;
   display: flex;
   justify-content: space-between;
   filter: drop-shadow(3px 2px 2px rgba(0, 0, 0, 0.2823529412));
@@ -257,9 +264,6 @@ main {
 @media screen and (min-width: 650px) {
   h1 {
     font-size: 60px;
-  }
-  p {
-    font-size: 20px;
   }
   h4 {
     font-size: 20px;
@@ -301,10 +305,10 @@ main {
     margin-bottom: 100px;
   }
   #about-me p {
-    margin: 30px 150px;
+    margin: 16px 5rem;
   }
   #contact-links {
-    margin: 50px 400px 100px;
+    margin: 50px 15rem 100px;
   }
   #fixed-header {
     display: none;
