nav and naming convention fixes

--- a/styles.scss
+++ b/styles.scss
@@ -196,12 +196,12 @@ img {
 
 }
 
-#empty-div {
+.empty-div {
   width: 100%;
   height: 400px;
 }
 
-#empty-div2 {
+.empty-div2 {
   width: 100%;
   height: 200px;
   border-top: 3px double white;
