--- a/styles.css
+++ b/styles.css
@@ -180,12 +180,12 @@ img {
   filter: drop-shadow(3px 2px 2px rgba(0, 0, 0, 0.2823529412));
 }
 
-#empty-div {
+.empty-div {
   width: 100%;
   height: 400px;
 }
 
-#empty-div2 {
+.empty-div2 {
   width: 100%;
   height: 200px;
   border-top: 3px double white;
